added front page and updated style

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Homeskape
-Theme URI: http://underscores.me/
+Theme URI: http://swcta-studioc.github.io
 Author: StudioC
 Author URI: http://swcta-studioc.github.io
 Description: Description
