--- a/style.css
+++ b/style.css
@@ -894,7 +894,29 @@ object {
 
 /*Header Styles*/
 
+#logo {
+	margin: -30px;
+}
+
+.site-branding {
+	background-color: white;
+	margin-top: 30px;
+	position: relative;
+}
+
+#site-navigation {
+	background-color: white;
+	margin-top: -22px;
+	position: relative;
+}
+
+.site-branding #logo, .site-branding .site-title {
+}
+
 #masthead {
+	background-color: #EDECEC;
+	position: relative;
+	width: 100%;
 }
 
 /*End of header styles*/
