--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Media
 	## Captions
 	## Galleries
+
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
@@ -888,3 +889,7 @@ object {
 .gallery-caption {
 	display: block;
 }
+/*--------------------------------------------------------------
+# Contact
+--------------------------------------------------------------*/
+.
