--- a/style.css
+++ b/style.css
@@ -889,12 +889,10 @@ object {
 .gallery-caption {
 	display: block;
 }
-<<<<<<< HEAD
+
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
-.
-=======
 
 
 
@@ -911,20 +909,60 @@ object {
 	position: relative;
 }
 
-#site-navigation {
-	background-color: white;
-	margin-top: -22px;
-	position: relative;
+.site-branding, nav {
 }
 
-.site-branding #logo, .site-branding .site-title {
+nav a, nav a:visited {
+	color: black;
+	margin-right: 15px;
+}
+
+.site-branding a {
+	color: #2C97D3;
+	text-decoration: none;
+}
+
+.site-branding h1 {
+	height: auto;
+	vertical-align: 165%;
+}
+
+.site-branding img, .site-branding h1, .site-branding p {
+	display: inline-block;
+}
+
+.main-navigation {
+	background-color: white;
+/*	margin-top: -22px;*/
+	position: relative;
 }
 
 #masthead {
 	background-color: #EDECEC;
-	position: relative;
 	width: 100%;
 }
 
 /*End of header styles*/
->>>>>>> origin/master
+
+/*Index styles*/
+
+#slideshow {
+	width: 100%;
+	height: 500px;
+	background-color: black;
+}
+
+#flavor-wrap {
+	width: 100%;
+	height: 200px;
+}
+
+.flavor {
+	display: inline-block;
+	text-align: center;
+	width: 14%;
+	margin: 0 9% ;
+	vertical-align: top;
+}
+
+/*End of index styles*/
